--- a/package.json
+++ b/package.json
@@ -1,63 +1,21 @@
 {
   "name": "react-d3-enter-exit-transitions",
-  "version": "1.0.0",
-  "description": "A proof of concept exploration of using d3js transitions in a React visualization.",
-  "scripts": {
-    "clean": "rimraf dist",
-    "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
-    "build": "npm run clean && npm run build:webpack",
-    "start": "node devServer.js",
-    "lint": "eslint src"
-  },
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "keywords": [
-    "react",
-    "reactjs",
-    "hot",
-    "reload",
-    "hmr",
-    "live",
-    "edit",
-    "webpack",
-    "babel",
-    "react-transform"
-  ],
-  "author": "Swizec Teller",
-  "license": "CC0-1.0",
-  "bugs": {
-    "url": "https://github.com/Swizec/livecoding-project/issues"
-  },
-  "homepage": "https://github.com/Swizec/livecoding-project",
-  "devDependencies": {
-    "babel-core": "^6.3.15",
-    "babel-eslint": "^5.0.0-beta4",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.0.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "cross-env": "^1.0.6",
-    "css-loader": "^0.23.1",
-    "eslint": "^1.10.3",
-    "eslint-plugin-babel": "^3.0.0",
-    "eslint-plugin-react": "^3.11.3",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.13.3",
-    "less-loader": "^2.2.2",
-    "rimraf": "^2.4.3",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.9",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0"
-  },
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "d3": "^4.0.0-alpha.29",
-    "lodash": "^4.6.1",
-    "react": "^15.0.0",
-    "react-addons-transition-group": "^15.0.1",
-    "react-dom": "^15.0.0"
+    "d3": "^4.12.2",
+    "lodash": "^4.17.4",
+    "react": "^16.2.0",
+    "react-addons-transition-group": "^15.6.2",
+    "react-dom": "^16.2.0"
+  },
+  "devDependencies": {
+    "react-scripts": "1.0.17"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
