--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "d3": "^5.7.0",
+        "gh-pages": "^2.0.1",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
         "react-transition-group": "^2.5.0"
@@ -15,6 +16,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
-    }
+        "eject": "react-scripts eject",
+        "predeploy": "yarn run build",
+        "deploy": "gh-pages -d build"
+    },
+    "homepage": "https://swizec.github.io/react-d3-enter-exit-transitions"
 }
